--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   /*background: color image repeat position/size */
 
   background: url(./assets/bg-mobile.jpg) no-repeat top center/cover;
+  height: 100vh;
 }
 
 :root {
@@ -164,4 +165,14 @@ footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
+}
+
+/* Media */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
